--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
 	compile 'org.sdmlib:SDMLib:2.+'
+	compile group: 'org.json', name: 'json', version: '20090211'
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:23.0'
 
