--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 dependencies {
@@ -29,13 +31,22 @@ dependencies {
     
     testCompile "org.testfx:testfx-core:4.0.15-alpha"
     testCompile "org.testfx:testfx-junit:4.0.15-alpha"
+    testCompile 'org.fulib:fulib:1.0.+'
+    testCompile 'org.fulib:fulibTables:1.0.+'
     
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:23.0'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
-    
-    
 }
+	task(runWarehouse, dependsOn: 'classes', type: JavaExec){
+		main = 'package_ha07.warehouse51.WarehouseServer'
+		classpath = sourceSets.main.runtimeClasspath
+	}
+	
+	task(runShop, dependsOn: 'classes', type: JavaExec){
+		main = 'package_ha07.shop24.ShopServer'
+		classpath = sourceSets.main.runtimeClasspath
+	}
 
